--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,54 @@
-site_name: My Docs
+site_name: Bianca workshop
+
+nav:
+  - Home: index.md
+  - Getting Started:
+    - Logging into Bianca: getting_started/login_bianca.md
+
+theme:
+  name: material
+  greetings: Welcome to Bianca workshop
+  font:
+    text: Lato
+    code: JetBrains Mono
+
+  logo: assets/logo.svg
+
+  features:
+    - navigation.tabs
+    - navigation.sections
+    - search.suggest
+    - content.code.annotate
+    - content.tabs.link
+
+  custom_dir: mkdocs_uppmax/
+    
+extra_css:
+  - stylesheets/extra.css
+
+markdown_extensions:
+  - toc:
+      toc_depth: 3
+      permalink: true
+      permalink_title: Anchor link to this section for reference
+  - admonition
+  - tables
+  - attr_list
+  - footnotes
+  - pymdownx.details
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.keys
+  - md_in_html
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
