--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,15 @@ nav:
   - Home: index.md
   - Getting Started:
     - Logging into Bianca: login_bianca.md
-
+    - Command-line intro: linux.md
+    - Module system: modules1.md
+    - Transfering files to/from Bianca: transfer.md
+  - NAISS-SENS and sensitive data: naiss-sens-bianca.md
+  - Using tools and install: 
+    - Module system (continued) and Slurm: modules-slurm.md
+    - Software installation without internet connection: install.md
+     
+ 
 theme:
   name: material
   greetings: Welcome to Bianca workshop
