--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: Bianca workshop
 
 nav:
   - Home: index.md
-  - Praxcticalities: practicalities.md
+  - Practicalities: practicalities.md
   - Getting Started:
     - Logging into Bianca: login_bianca.md
     - Overview: overview.md
