--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
     - Module system (continued) and Slurm: modules-slurm.md
     - Software installation without internet connection: install.md
   - Extra material:
+    - slurm.md
     - conda.md
     - pip.md
     - rpackages.md
