--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,3 +71,7 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
+plugins:
+   — plantuml:
+        puml_url: https://www.plantuml.com/plantuml/
+        num_workers: 8
