--- a/.github/workflows/gh.yaml
+++ b/.github/workflows/gh.yaml
@@ -12,8 +12,8 @@ jobs:
         with:
           python-version: 3.x
       # Install plantuml
-      - name: Install OS package dependencies
-        run: |
-          sudo apt install plantuml
+      - name: mkdocs build
+        uses: 'docker://ghcr.io/mikaelhg/mkdocs-material-plantuml:latest'
+      
       - run: pip install mkdocs-material
       - run: mkdocs gh-deploy --force
