--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,9 @@ nav:
   - Getting Started:
     - Overview: overview.md
     - Logging into Bianca: login_bianca.md
-    - Command-line intro: linux.md
+    - Command-line intro: 
+      - linux.md
+      - commandline.md
     - Module system: modules1.md
     - Transfering files to/from Bianca: transfer.md
   - NAISS-SENS and sensitive data: naiss-sens-bianca.md
