rm jupyter fix commandline

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,9 +6,8 @@ nav:
   - Getting Started:
     - Overview: overview.md
     - Logging into Bianca: login_bianca.md
-    - Command-line intro: 
-      - linux.md
-      - commandline.md
+    - Command-line intro: linux.md
+    - Command-line intro2: commandline.md
     - Module system: modules1.md
     - Transfering files to/from Bianca: transfer.md
   - NAISS-SENS and sensitive data: naiss-sens-bianca.md
@@ -21,7 +20,6 @@ nav:
     - pip.md
     - rpackages.md
     - julia.md
-    - jupyter.md
     - containers.md
   - Exercises: exercises.md
      
