--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,7 +44,7 @@ theme:
     - content.code.annotate
     - content.tabs.link
 
-#  custom_dir: mkdocs_uppmax/
+  custom_dir: mkdocs_uppmax/
     
 extra_css:
   - stylesheets/extra.css
