--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,10 +3,11 @@ site_name: UPPMAX for Deep Learning
 nav:
   - Home: index.md
   - Course content:
-    - Overview: overview.md
+#    - Overview: overview.md
 #    - Login: login.md
-    - Module system: modules.md
-    - Slurm: slurm-intro.md
+#    - Module system: modules.md
+#    - Slurm: slurm-intro.md
+    - Intro: intro.md
     - Jupyter Notebooks: jupyter.md
     - TensorBoard: tensorboard.md
 #    - Python packages: pip.md
