--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ nav:
     - Intro: intro.md
     - Hardware: hardware_snowy.md
     - Slurm: slurm-intro.md
+    - Isolated Environments: isolated_envs.md
     - Jupyter Notebooks: jupyter.md
     - VS Code: VSCode.md
     - DL Exercises: DL_exercises.md
